--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -43,6 +43,37 @@
       border-radius: 50%;
       background-color: #fff;
     }
+    &__list {
+      display: none;
+      min-width: 190px;
+      position: absolute;
+      top: 16px;
+      right: 7px;
+      box-sizing: border-box;
+      padding: .5em 1em;
+      background: rgba(35, 35, 35, 0.9181);
+      box-shadow: 
+        0px 0px 2px rgba(0, 0, 0, 0.1),
+        0px 2px 10px rgba(0, 0, 0, 0.1),
+        0px 10px 20px rgba(0, 0, 0, 0.1),
+        0px 10px 50px rgba(0, 0, 0, 0.1);
+      backdrop-filter: blur(27.1828px);
+      border-radius: 4px;
+      &--active {
+        display: block;
+      }
+      &-item {
+        width: 100%;
+        font-size: 1em;
+        padding: .5em 0;
+        height: 2em;
+        line-height: 1;
+        box-sizing: border-box;
+        &:hover {
+          background-color: #F65261;
+        }
+      }
+    }
   }
   &:hover &__context-menu {
     display: block;
