--- a/src/components/MovieTable/table.module.scss
+++ b/src/components/MovieTable/table.module.scss
@@ -4,6 +4,16 @@
   font-size: 1rem;
   color: #fff;
   padding: 0 1em;
+  &__tab__wrapper {
+    border: 0;
+    border-bottom: 1px solid #080707;
+    margin: 0 1em;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+    color: #fff;
+  }
   &__count {
     padding: 1.5em 0;
     padding-left: 1em;
@@ -22,5 +32,26 @@
     .card-item {
       margin: 1em;
     }
+  }
+}
+
+.filter {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  font-weight: 400;
+  font-size: .875em;
+  letter-spacing: 0.888889px;
+  &:hover {
+    cursor: default;
+  }
+  > p {
+    opacity: .6;
+    margin-right: 1em;
+  }
+  &__selector {
+    font-weight: 500;
+    opacity: .8;
+    width: 180px;
   }
 }
