--- a/src/components/MovieDetail/movie-detail.module.scss
+++ b/src/components/MovieDetail/movie-detail.module.scss
@@ -1,7 +1,8 @@
 .movie-detail {
-  width: 100%;
   padding: 20px;
   font-size: 1em;
+  background: rgba(35, 35, 35, 1);
+  color: white;
   &__header {
     display: flex;
     justify-content: space-between;
@@ -16,8 +17,38 @@
   }
   &__main {
     width: 100%;
+    display: flex;
   }
   &__img {
     height: 360px;
+    margin-right: 30px;
+    > img {
+      width: auto;
+      height: 100%;
+    }
+  }
+  &__content {
+    flex: 1;
+  }
+  &__title {
+    position: relative;
+    font-size: 2em;
+    padding-right: 1.1em;
+  }
+  &__rate {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 1em;
+    height: 1em;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  &__genres {}
+  &__publish-year__duration > span {
+    margin-right: 1em;
   }
 }
