--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -27,9 +27,12 @@
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.196596);
     border: 0;
     border-radius: 50%;
+    opacity: .9;
+    &--active {
+      display: block;
+    }
     &:hover {
       cursor: pointer;
-      filter: brightness(1.3);
     }
     &__ovals {
       width: 4px;
