--- a/src/components/MovieDetail/movie-detail.module.scss
+++ b/src/components/MovieDetail/movie-detail.module.scss
@@ -1,5 +1,5 @@
 .movie-detail {
-  padding: 20px;
+  padding: 1em 2em;
   font-size: 1em;
   background: rgba(35, 35, 35, 1);
   color: white;
@@ -13,6 +13,9 @@
     }
     &--right {
       transform: scaleX(-1);
+      &:hover {
+        cursor: pointer;
+      }
     }
   }
   &__main {
@@ -21,6 +24,7 @@
   }
   &__img {
     height: 360px;
+    width: 270px;
     margin-right: 30px;
     > img {
       width: auto;
@@ -32,23 +36,35 @@
   }
   &__title {
     position: relative;
-    font-size: 2em;
+    font-size: 2.5em;
+    font-weight: 300;
+    height: 1.2em;
+    line-height: 1;
+    letter-spacing: 1px;
     padding-right: 1.1em;
   }
   &__rate {
+    font-size: .75em;
     position: absolute;
     top: 0;
     right: 0;
-    width: 1em;
-    height: 1em;
+    width: 1.5em;
+    height: 1.5em;
     border: 1px solid #fff;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
   }
-  &__genres {}
+  &__genres {
+    font-size: 1em;
+    font-weight: 500;
+    margin-bottom: 2em;
+    color: #fff;
+    opacity: .5;
+  }
   &__publish-year__duration > span {
-    margin-right: 1em;
+    margin-right: 2em;
+    color: rgba(246, 82, 97, 1);
   }
 }
