feat(MovieForm, DeleteModal, Button, Input, Api): task7; - Add validation for movie-form with formik;\n - Add DeleteModal and implement delete function;\n - Add the delete api with react-thunk;\n - Refactor the <Button> component; \n - Change <Footer> component's callback props type

--- a/src/components/Modal/styles/popup.module.scss
+++ b/src/components/Modal/styles/popup.module.scss
@@ -20,4 +20,15 @@
     line-height: 1;
     letter-spacing: 1px;
   }
+
+  &__footer {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-top: 16px;
+    &__button {
+      padding: 0 2px;
+    }
+  }
 }
