--- a/src/components/Input/input.module.scss
+++ b/src/components/Input/input.module.scss
@@ -1,4 +1,4 @@
-.input {
+.input-field {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -18,6 +18,7 @@
     line-height: 1;
     margin-right: 10px;
     padding-left: .75em;
+    padding-right: .75em;
     border-radius: 4px;
     opacity: 0.8;
     background: rgba(50, 50, 50, 0.8);
@@ -29,6 +30,9 @@
     &:focus, &:focus-visible {
       outline: rgb(118, 118, 118) solid 2px;
       outline-offset: -2px;
+    }
+    &.invalid {
+      outline: #dc3545 solid 1px;
     }
   }
   input {
