--- a/src/components/MovieModal/movie-form.module.scss
+++ b/src/components/MovieModal/movie-form.module.scss
@@ -3,13 +3,12 @@
 .movie-form {
   display: flex;
   flex-direction: column;
-  margin-bottom: 60px;
   gap: 30px;
   &__left {
     margin-right: 10px;
   }
 
-  .drop-down__label {
+  .form-label {
     display: inline-block;
     font-weight: 600;
     font-size: 16px;
@@ -20,5 +19,12 @@
     mix-blend-mode: normal;
     opacity: 0.8;
     padding-bottom: 13px;
+  }
+  .form-error {
+    color: white;
+    font-size: 14px;
+    height: 20px;
+    line-height: 1;
+    padding-left: .5em;
   }
 }
