--- a/src/components/MovieTable/table.module.scss
+++ b/src/components/MovieTable/table.module.scss
@@ -37,7 +37,6 @@
 }
 
 .filter {
-  flex: 3;
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
@@ -50,6 +49,7 @@
   > p {
     opacity: .6;
     margin-right: 1em;
+    white-space: nowrap;
   }
   &__selector {
     font-weight: 500;
